<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.stoneryan.android.clientmanager.AddSessionActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_container"/>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_container"
        android:layout_centerHorizontal="true"
        android:id="@+id/tablelayout"
        android:layout_marginTop="16dp"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:text="@string/date_tv"
                android:layout_column="0"/>

            <EditText
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:id="@+id/newDate"
                android:layout_column="1"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/time_tv"
                android:layout_column="0"/>

            <EditText
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:id="@+id/newTime"
                android:layout_column="1"/>
        </TableRow>
        <!-- TODO: Enable setting multiple session dates in one transaction.
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/frequency_tv"
                android:layout_column="0"/>

            <EditText
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:id="@+id/newFrequency"
                android:layout_column="1"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/quantity_tv"
                android:layout_column="0"/>

            <EditText
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:id="@+id/newQuantity"
                android:layout_column="1"/>
        </TableRow>      -->
    </TableLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tablelayout"
        android:id="@+id/total_price"
        android:paddingTop="32dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_price_tv"/>

        <!-- TODO: Math for total price -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/total_price"
        android:layout_centerHorizontal="true"
        android:padding="32dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_cancel"
            android:id="@+id/cancel_button"
            android:onClick="CancelButton"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_purchase"
            android:id="@+id/purchase_button"
            android:onClick="PurchaseButton"/>


    </LinearLayout>

</RelativeLayout>
